--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,5 @@ github_username:  c0ze
 
 # Build settings
 markdown: kramdown
+
+exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", "vendor", "Gemfile*"]
