--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
   - 2.2.3
-script: bundle exec jekyll build && bundle exec rake minify && bundle exec rake s3
+script: bundle install && bundle exec jekyll build && bundle exec rake minify && bundle exec rake s3
 branches:
   only:
     - releases
