--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-geo"]
 	path = themes/hugo-geo
-	url = https://github.com/alexurquhart/hugo-geo.git
+	url = https://github.com/c0ze/hugo-geo.git
