--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - wget https://github.com/bep/s3deploy/releases/download/v2.1.0/s3deploy_2.1.0_Linux-64bit.deb
   - sudo dpkg -i s3deploy_2.1.0_Linux-64bit.deb
 
-script: deploy.sh
+script: ./deploy.sh
 branches:
   only:
     - hugo-releases
