Archive: update personal links and email

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ pagerSize = 5
 	analytics = "UA-56175514-5"
 
 	# Email (optional)
-	email = "akaraduman@gmail.com"
+	email = "arda@karaduman.tr"
 
 	# Header Title for the main page
 	header = "Arda Karaduman"
